deployment.gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-data-protection-test-gateway
  labels:
    app: cloud-data-protection-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-data-protection-test
  template:
    metadata:
      labels:
        app: cloud-data-protection-test
    spec:
      containers:
        - name: cloud-data-protection-gateway
          image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_gateway
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
          ports:
            - containerPort: 5001
