deployment.mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-data-protection-test-mail-service
  labels:
    app: cloud-data-protection-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-data-protection-test
  template:
    metadata:
      labels:
        app: cloud-data-protection-test
    spec:
      containers:
        - name: cloud-data-protection-mail-service
          image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_mail_service
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:
            - containerPort: 5051
