deployment.backupconfig.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-data-protection-test-backup-config-service-deployment
spec:
  selector:
    matchLabels:
      app: cloud-data-protection-test-backup-config-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cloud-data-protection-test-backup-config-app
    spec:
      containers:
        - name: cloud-data-protection-backup-config-service-container
          image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_backup_config_service
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
          ports:
            - containerPort: 5031
              
---

apiVersion: v1
kind: Service
metadata:
  name: backup-config-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: cloud-data-protection-test-backup-config-app
  ports:
  - targetPort: 5031
    port: 80
