deployment.loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-data-protection-test-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: cloud-data-protection-test
  ports:
  - name: 'nginx'
    port: 80
    targetPort: 80
  - name: 'gateway'
    port: 5001
    targetPort: 5001
