deployment.onboarding.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-data-protection-test-onboarding-service-deployment
spec:
  selector:
    matchLabels:
      app: cloud-data-protection-test-onboarding-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cloud-data-protection-test-onboarding-app
    spec:
      containers:
        - name: cloud-data-protection-onboarding-service
          image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_onboarding_service
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
          ports:
            - containerPort: 5021

---

apiVersion: v1
kind: Service
metadata:
  name: onboarding-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: cloud-data-protection-test-onboarding-app
  ports:
  - protocol: TCP
    targetPort: 5021
    port: 80
