deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-data-protection-test
  labels:
    app: cloud-data-protection-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-data-protection-test
  template:
    metadata:
      labels:
        app: cloud-data-protection-test
    spec:
      containers:
      - name: cloud-data-protection-frontend
        image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_react
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
      - name: cloud-data-protection-gateway
        image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_gateway
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5001
      - name: cloud-data-protection-onboarding-service
        image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_onboarding_service
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5021
      - name: cloud-data-protection-backup-config-service
        image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_backup_config_service
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5031
      - name: cloud-data-protection-mail-service
        image: cdpregistrytest.azurecr.io/clouddataprotection:cdp_mail_service
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 5051
    
---

apiVersion: v1
kind: Service
metadata:
  name: cloud-data-protection-test-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: cloud-data-protection-test
  ports:
      # NGINX
  - name: 'nginx'
    port: 80
    targetPort: 80
      # API gateway
  - name: 'gateway'
    port: 5001
    targetPort: 5001
