ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clouddataprotection-test-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - clouddataprotectiontest.francecentral.cloudapp.azure.com
    secretName: aks-ingress-tls
  rules:
  - host: clouddataprotectiontest.francecentral.cloudapp.azure.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cloud-data-protection-test-load-balancer
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-data-protection-test-load-balancer
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-data-protection-test-load-balancer
            port:
              number: 80
